--- a/style.scss
+++ b/style.scss
@@ -103,28 +103,29 @@ main aside{
 	}
 }
 
-main aside .buttons{
+main aside .buttons.top{
 	display: flex;
 	gap: 1vw;
+
+	button {
+		text-transform: uppercase;
+		font-family: 'Kanit', sans-serif;
+		font-size: 1.3rem;
+		font-weight: 300;
+		display: block;
+		color: $gray-text;
+		transition: color .2s;
+
+		&:hover{
+			color: $gray-text-hover;
+		}
+
+		&.selected {
+			color: $color-contrast;
+		}
+	}
 }
 
-main aside .buttons button {
-	text-transform: uppercase;
-	font-family: 'Kanit', sans-serif;
-	font-size: 1.3rem;
-	font-weight: 300;
-	display: block;
-	color: $gray-text;
-	transition: color .2s;
-
-	&:hover{
-		color: $gray-text-hover;
-	}
-
-	&.selected {
-		color: $color-contrast;
-	}
-}
 
 main aside ul{
 	list-style-type: none;
@@ -143,6 +144,7 @@ main aside ul li{
 	position: relative;
 	transition: all .2s;
 	cursor: pointer;
+	user-select: none;
 
 	&:hover{
 		color: $gray-text-hover;
@@ -175,22 +177,34 @@ main aside ul li{
 	}
 }
 
-main aside .editButton{
+main aside .buttons.bottom{
 	margin-top: auto;
-	text: {
-		decoration: underline;
-		transform: uppercase;
-	}
-	font: {
-		family: montserrat;
-		weight: 300;
-	}
-	cursor: pointer;
-	transition: all .2s;
-	padding-block: .8rem;
+	display: flex;
+	justify-content: space-between;
 
-	&:hover{
-		text-decoration-color: transparent;
+	button{
+		color: $gray-text-hover;
+		text: {
+			decoration: underline;
+			decoration-color: transparent;
+			transform: uppercase;
+		}
+		font: {
+			family: montserrat;
+			weight: 300;
+		}
+		cursor: pointer;
+		transition: all .2s;
+		padding-block: .8rem;
+
+		&:hover{
+			text-decoration-color: #b9b9b9;
+		}
+
+		i{
+			color: $gray-text;
+			margin-inline: .5rem;
+		}
 	}
 }
 
@@ -225,7 +239,7 @@ main .animals{
 		right: 0;
 		height: 10vh;
 		background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-		pointer-events: $gray-100;
+		pointer-events: none;
 	}
 }
 
@@ -252,10 +266,9 @@ main .animals .header .path{
 	}
 }
 
-main .animals .header #add-animal{
+main .animals .header button{
 	padding: .15rem .8rem;
-	border: .15rem solid $color-accent;
-	border-radius: 1rem;
+
 	color: $color-accent;
 	font:{
 		weight: 300;
@@ -264,20 +277,30 @@ main .animals .header #add-animal{
 	text-transform: uppercase;
 	transition: all .2s;
 
-	&:hover{
-		font-weight: 500;
-		color: $gray-100;
-		background-color: $color-accent;
+	&.outlined{
+		border: .12rem solid $color-accent;
+		border-radius: 1rem;
+
+		&:hover{
+			/*
+			font-weight: 500;
+			*/
+			color: black;
+			background-color: $color-accent;
+		}
 	}
 }
 
 main .animals .content{
-	display: flex;
+	display: grid;
+	grid-template-columns: repeat(3, minmax(0, 1fr));
 	gap: 1rem;
 	overflow: auto;
 	&::-webkit-scrollbar{
 		display: none;
 	}
+	padding-bottom: 10vh;
+	overflow: hidden;
 
 	.column{
 		display: flex;
@@ -287,12 +310,15 @@ main .animals .content{
 		gap: 1rem;
 	}
 }
+
 main .animals .content .animal{
 	background-color: $gray-200;
 	border-radius: .5rem;
 	box-sizing: border-box;
 	padding: .5rem;
 	font-family: "montserrat", "sans-serif";
+	width: 100%;
+	overflow: hidden;
 
 	h2{
 		font: {
@@ -302,6 +328,10 @@ main .animals .content .animal{
 		}
 		text-transform: uppercase;
 		color: $color-accent;
+		overflow-wrap: break-word;
+		word-wrap: break-word;
+		hyphens: auto;
+		width: 100%;
 	}
 
 	hr.accent{
@@ -372,6 +402,13 @@ main .animals .content .animal{
 			border-radius: .5rem;
 		}
 	}
+}
+
+#editPopup{
+	position: absolute;
+	background-color: $gray-300;
+	padding: .5rem;
+	top: 0;
 }
 
 //endregion
