--- a/style.css
+++ b/style.css
@@ -106,6 +106,10 @@ main aside .content > ul {
   opacity: 0;
   height: 0;
   overflow: hidden;
+  overflow-y: auto;
+}
+main aside .content > ul::-webkit-scrollbar {
+  display: none;
 }
 main aside .content > ul.selected {
   transition: opacity 0.5s;
@@ -154,10 +158,14 @@ main aside ul li.selected, main aside ul li.selected span {
 main aside ul li.selected::before, main aside ul li.selected span::before {
   background-color: hsl(43, 100%, 57%);
 }
+main aside ul li.last {
+  margin-top: 0.8rem;
+}
 
 main aside .buttons.bottom {
   margin-top: auto;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 main aside .buttons.bottom button {
@@ -284,6 +292,13 @@ main .animals .content .animal h2 {
   word-wrap: break-word;
   hyphens: auto;
   width: 100%;
+  transition: all 0.2s;
+}
+main .animals .content .animal h2:focus-visible {
+  outline: none;
+  background-color: hsl(0, 0%, 20%);
+  padding-left: 0.2rem;
+  box-shadow: 0 0 0.1rem 0.1rem rgba(0, 0, 0, 0.5) inset;
 }
 main .animals .content .animal hr.accent {
   border-color: hsl(43, 100%, 57%);
@@ -295,9 +310,9 @@ main .animals .content .animal span.label {
   text-decoration: none;
 }
 main .animals .content .animal span.link {
-  text-decoration: underline;
-  text-underline-offset: 0.1rem;
-  text-decoration-color: hsl(0, 0%, 80%);
+  /*			text-decoration: underline;
+  			text-underline-offset: .1rem;
+  			text-decoration-color: $gray-text-hover;*/
   cursor: pointer;
   transition: all 0.2s;
 }
@@ -310,6 +325,16 @@ main .animals .content .animal p {
 }
 main .animals .content .animal p.note {
   color: hsl(0, 0%, 55%);
+  transition: all 0.2s;
+  padding: 0.2rem;
+  padding-left: 0;
+}
+main .animals .content .animal p.note:focus-visible {
+  outline: none;
+  background-color: hsl(0, 0%, 20%);
+  box-shadow: 0 0 0.1rem 0.1rem rgba(0, 0, 0, 0.5) inset;
+  padding-left: 0.2rem;
+  color: hsl(0, 0%, 80%);
 }
 main .animals .content .animal p.subtext {
   font-weight: 300;
@@ -318,9 +343,6 @@ main .animals .content .animal p:focus {
   outline: 1px solid hsl(0, 0%, 55%);
   border: none;
   border-radius: 0.2rem;
-}
-main .animals .content .animal p[contenteditable=true] {
-  padding: 0.1rem;
 }
 main .animals .content .animal .top {
   display: flex;
