--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   padding: 0;
   font: inherit;
   accent-color: hsl(43, 100%, 57%);
+  color-scheme: dark;
 }
 
 img {
@@ -218,6 +219,11 @@ main .animals > .bottom {
   background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(0, 0, 0, 0) 100%);
   pointer-events: none;
 }
+main .animals #datePick {
+  visibility: hidden;
+  height: 0;
+  width: 0;
+}
 
 main .animals .header .path {
   font-family: "Kanit", sans-serif;
@@ -378,9 +384,10 @@ main .animals .content .animal .top .imgbox {
   overflow-y: auto;
   box-shadow: 0.2rem 0.2rem 0.4rem 0.2rem rgba(0, 0, 0, 0.4);
   border: 0.1rem solid hsl(0, 0%, 30%);
+  align-items: center;
 }
 #editPopup.active {
-  display: block;
+  display: flex;
 }
 #editPopup p {
   background-color: hsl(0, 0%, 15%);
@@ -394,6 +401,10 @@ main .animals .content .animal .top .imgbox {
 }
 #editPopup p:hover {
   border-color: hsl(0, 0%, 55%);
+}
+#editPopup i {
+  font-size: 1.5rem;
+  margin-left: 0.5rem;
 }
 
 /*---------- login ----------*/
