--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@ hr {
   margin-block: 0.5rem;
 }
 
+.popupEngineNotification {
+  border: 1px solid hsl(0, 0%, 55%);
+}
+
 /*---------- nav ----------*/
 nav {
   width: 100%;
@@ -384,50 +388,31 @@ main .animals .content .animal .top .imgbox {
   overflow-y: auto;
   box-shadow: 0.2rem 0.2rem 0.4rem 0.2rem rgba(0, 0, 0, 0.4);
   border: 0.1rem solid hsl(0, 0%, 30%);
-  align-items: center;
+  align-items: flex-start;
+  row-gap: 0.3rem;
+  column-gap: 0.5rem;
 }
 #editPopup.active {
-  display: flex;
+  display: grid;
 }
-#editPopup p {
+#editPopup p, #editPopup input, #editPopup .confirm {
   background-color: hsl(0, 0%, 15%);
   padding: 0.2rem;
   padding-right: 0.5rem;
   border: 0.1rem solid hsl(0, 0%, 15%);
   border-radius: 0.2rem;
-  margin-bottom: 0.2rem;
   color: hsl(0, 0%, 80%);
   cursor: pointer;
+  box-sizing: border-box;
 }
-#editPopup p:hover {
+#editPopup p:hover, #editPopup input:hover, #editPopup .confirm:hover {
   border-color: hsl(0, 0%, 55%);
 }
-#editPopup i {
-  font-size: 1.2rem;
-  margin-left: 0.5rem;
-}
-
-#datepicker {
-  position: absolute;
-  top: 100px;
-  left: 100px;
-  z-index: 9999;
-  background-color: black;
-  border: 1px solid gray;
-  width: fit-content;
-}
-#datepicker table {
-  border-collapse: collapse;
-}
-#datepicker th {
-  font-weight: bold;
-  text-align: center;
-}
-#datepicker td {
-  text-align: center;
-}
-#datepicker tr {
-  width: fit-content;
+#editPopup .confirm {
+  display: grid;
+  place-items: center;
+  aspect-ratio: 1;
+  height: 100%;
 }
 
 /*---------- login ----------*/
