--- a/style.scss
+++ b/style.scss
@@ -81,6 +81,11 @@ nav{
 	box-shadow: 0 .5rem .5rem rgba(0, 0, 0, 0.3);
 	position: relative;
 	z-index: 10;
+
+	.login-nav{
+		display: flex;
+		justify-content: center;
+	}
 	
 	h1{
 		font-size: 5dvh;
